--- a/memoria.html
+++ b/memoria.html
@@ -15,12 +15,36 @@
     class Card extends React.Component{
         render(){
             const style = {
-                backgroundColor: 'red',
-                width: '40px',
-                height: '40px',
-                position: 'absolute'
+                width: '90%',
+                height: '90%',
+                transformStyle: 'preserve-3d',
+                transition: 'all 0.5% ease'
             }
-            return <div style={style} />
+            const front = {
+                position: 'absolute',
+                width: '100%',
+                height: '100%',
+                borderRadius: '20px',
+                backfaceVisibility: 'hidden',
+                background: 'blue',
+                color: '#333',
+            }
+            const back = {
+                position: 'absolute',
+                width: '100%',
+                height: '100%',
+                borderRadius: '20px',
+                backfaceVisibility: 'hidden',
+                background: '#fafafa',
+                color: '#333',
+                transform: 'rotateY(180deg)',
+            }
+            return (
+                <div style={style}>
+                    <div style={front}/>
+                    <div style={back}/>
+                </div>
+            )
         }
     }
     class Container extends React.Component{
@@ -28,16 +52,26 @@
             const style = {
                 backgroundColor: 'green',
                 width: '1200px',
-                height: '1200px',
-                /*display: 'grid',
-                grid-gap: '30px 5%';
-                grid-template-columns: '30% 30% 30%';*/
+                height: '700px',
+                display: 'grid',
+                gridGap: '2% 2%',
+                gridTemplateColumns: '20% 20% 20% 20%',
+                alignItems: 'center',
+                justifyContent: 'center',
             }
-        }
-        return(){
-            <div style={style}>
-                < Card/>
-            </div>
+            
+        return(
+              <div style={style}>
+                  < Card/>
+                  < Card/>
+                  < Card/>
+                  < Card/>
+                  < Card/>
+                  < Card/>
+                  < Card/>
+                  < Card/>
+              </div>
+            )
         }
     }
     ReactDOM.render(
