--- a/memoria.html
+++ b/memoria.html
@@ -13,17 +13,41 @@
     <div id="root"></div>
     <script type="text/babel">
     class Card extends React.Component{
+        constructor(props) {
+            super(props);
+            this.state = {
+                isTurned: true,
+                rotate : 0
+            };
+            // This binding is necessary to make `this` work in the callback
+            this.handleClick = this.handleClick.bind(this);
+        }
+        handleClick(event) {
+            this.setState(state => ({
+                isTurned: !state.isTurned,
+                rotate: (state.rotate + 180)
+            }));
+            //console.log(event.currentTarget.style);
+            
+        }
         render(){
             const style = {
+                display:'flex',
+                backgroundColor: 'white',
                 width: '90%',
                 height: '90%',
+                borderRadius: '20px',
                 transformStyle: 'preserve-3d',
-                transition: 'all 0.5% ease'
+                transition: 'all 0.8s ease',
+                /*transform: [{rotate: '-180deg'},],*/
+                transform: `rotateY(${this.state.rotate}deg)`,
+                alignItems: 'center',
+                justifyContent: 'center',
             }
             const front = {
                 position: 'absolute',
-                width: '100%',
-                height: '100%',
+                width: '90%',
+                height: '90%',
                 borderRadius: '20px',
                 backfaceVisibility: 'hidden',
                 background: 'blue',
@@ -31,18 +55,21 @@
             }
             const back = {
                 position: 'absolute',
-                width: '100%',
-                height: '100%',
+                width: '90%',
+                height: '90%',
                 borderRadius: '20px',
                 backfaceVisibility: 'hidden',
-                background: '#fafafa',
                 color: '#333',
-                transform: 'rotateY(180deg)',
+                background: 'red',
+                backgroundImage: `url(images/happy_banana.png)`,
+                backgroundSize: '100% 100%',
+                transform: [{ rotateX: '45deg' }, { rotateZ: '0.785398rad' }],
+                /*transform: [{rotateY: '180deg'},],*/
             }
             return (
-                <div style={style}>
-                    <div style={front}/>
-                    <div style={back}/>
+                <div style={style} onClick={this.handleClick}>
+                    <div style={front}> the front</div>
+                    <div style={back}> the back </div>
                 </div>
             )
         }
