--- a/memoria.html
+++ b/memoria.html
@@ -66,13 +66,15 @@
                 borderRadius: '20px',
                 backfaceVisibility: 'hidden',
                 backgroundColor: 'red',
-                backgroundImage: `url(${this.state.image})`,
+                backgroundImage: `url(${this.state.image}), url(images/backbg.jpeg)`,
                 backgroundSize: '100% 100%',
                 transform: `rotateY(180deg)`,
             }
             return (
                 <div style={style} onClick={this.handleClick}>
-                    <div className="frontCard"/>
+                    <div className="frontCard">
+                        fjdksalfjdksal
+                    </div>
                     <div style={back}/>
                 </div>
             )
@@ -185,7 +187,7 @@
                         {this.state.cardLayout}
                     </div>
                     <div className="text">MOVIMIENTOS: {this.state.movements}</div>
-                    <div>JUEGO FINALIZADO</div>
+                    <div className="endText">JUEGO FINALIZADO</div>
                 </div>
                 )
             }
