--- a/memoria.html
+++ b/memoria.html
@@ -66,7 +66,7 @@
                 position: 'absolute',
                 width: '90%',
                 height: '90%',
-                border: '15px solid white',
+                border: '10px solid white',
                 borderRadius: '20px',
                 backfaceVisibility: 'hidden',
                 backgroundColor: 'red',
@@ -184,6 +184,10 @@
             }
         }
     }
+    /*
+        Ana Lucia Hernandez. 17138
+        13.09.2019
+    */
     class Container extends React.Component{
         render(){
             return(
